set up command thing correctly hopefully